syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ecommerce.grpc";
option java_outer_classname = "IdProto";

service IdService {
  rpc getId (IdRequest) returns (IdReply) {
  }
}

message IdRequest {
  oneof request {
    string id = 1;
    string name = 2;
  }
}

message IdReply {
  string itemName = 1;
  int32 itemCount = 2;
  int32 itemPrice = 3;
  int32 itemStatus = 4;
}
